i18n/ja/docusaurus-plugin-content-docs/current/references/sdk/ethers-ext/v5/account-management/sign-message/public-recover-msg.mdx
# パブリック・アカウント・キー

**AccountKeyPublic**は、1つの公開鍵を持つアカウントに使用される。 アカウントにAccountKeyPublicオブジェクトがある場合、トランザクションの検証処理は以下のように行われる：

<CH.Spotlight>
<CH.Code>

```js SignMsgWithPubkeyExample.js
const { ethers } = require("ethers");

const { Wallet } = require("@kaiachain/ethers-ext/v5");

const senderAddr = "0xe15cd70a41dfb05e7214004d7d054801b2a2f06b";
const senderPriv = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";

const provider = new ethers.providers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
const wallet = new Wallet(senderAddr, senderPriv, provider); // decoupled account

async function main() {
  const msg = "hello";
  const msghex = ethers.utils.hexlify(ethers.utils.toUtf8Bytes(msg));
  const sig = await wallet.signMessage(msg);
  console.log({ senderAddr, msg, msghex, sig });

  const addr1 = ethers.utils.verifyMessage(msg, sig);
  console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === wallet.address.toLowerCase());

  const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
  console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === wallet.address.toLowerCase());
}

main().catch(console.error);
```

---

```zsh output
js SignMsgWithPubkeyExample.js
{
  senderAddr: '0xe15cd70a41dfb05e7214004d7d054801b2a2f06b',
  msg: 'hello',
  msghex: '0x68656c6c6f',
  sig：'0xed55b92b3db953c4b4d928c99f93275d2590fe2ec95f2d8c069068d86d43ce0c0d1206f297351c6a0dfaba9c24d1a2ac293ac8f8a73d16c2b0c39ce90bc36ab71b'
}
recoveredAddr lib 0xA2a8854b1802D8Cd5De631E690817c253d6a9153 true
recoveredAddr rpc 0xA2a8854b1802D8Cd5DE631E690817c253d6a9153 true
```

</CH.Code>

---

ethers.jsにkaiaの機能を追加するために、**ethers**および**@kaiachain/ethers-ext**パッケージをインポートする。

```js SignMsgWithPubkeyExample.js focus=1:3

```

---

送信者の**アドレス**と**秘密鍵**を定義する。

```js SignMsgWithPubkeyExample.js focus=5:6

```

---

指定された**kairos** testnet URLでプロバイダを設定します。 エーテルにおけるプロバイダーとは、ブロックチェーンのデータにアクセスするための読み取り専用の抽象化されたものである。

```js SignMsgWithPubkeyExample.js focus=8

```

---

また、プロバイダのURLを**kairos**から**quicknode**に変更することができます。

```js SignMsgWithPubkeyExample.js focus=8
const { ethers } = require("ethers");

const { Wallet } = require("@kaiachain/ethers-ext/v5");

const senderAddr = "0xe15cd70a41dfb05e7214004d7d054801b2a2f06b";
const senderPriv = "0x0e4ca6d38096ad99324de0dde108587e5d7c600165ae4cd6c2462c597458c2b8";

const provider = new ethers.providers.JsonRpcProvider("https://public-en-kairos.node.kaia.io");
const wallet = new Wallet(senderAddr, senderPriv, provider); // decoupled account

async function main() {
  const msg = "hello";
  const msghex = ethers.utils.hexlify(ethers.utils.toUtf8Bytes(msg));
  const sig = await wallet.signMessage(msg);
  console.log({ senderAddr, msg, msghex, sig });

  const addr1 = ethers.utils.verifyMessage(msg, sig);
  console.log("recoveredAddr lib", addr1, addr1.toLowerCase() === wallet.address.toLowerCase());

  const addr2 = await provider.send("klay_recoverFromMessage", [senderAddr, msghex, sig, "latest"]);
  console.log("recoveredAddr rpc", addr2, addr2.toLowerCase() === wallet.address.toLowerCase());
}

main().catch(console.error);
```

---

秘密鍵**と**プロバイダー\*\*を使って送信者のウォレットを作成する。

```js SignMsgWithPubkeyExample.js focus=9

```

---

署名され、復元されるメッセージを定義する

```js SignMsgWithPubkeyExample.js focus=12

```

---

送信者の**財布**でメッセージに署名する。

<CH.Code>
```js SignMsgWithPubkeyExample.js focus=13:15

````
---

```zsh output
{
  senderAddr: '0xe15cd70a41dfb05e7214004d7d054801b2a2f06b',
  msg: 'hello',
  msghex: '0x68656c6c6f',
  sig: '0xed55b92b3db953c4b4d928c99f93275d2590fe2ec95f2d8c069068d86d43ce0c0d1206f297351c6a0dfaba9c24d1a2ac293ac8f8a73d16c2b0c39ce90bc36ab71b'
}
````

</CH.Code>

---

ethers.utils.verifyMessage\`を使用して署名されたメッセージからアドレスを復元する。

<CH.Code>
```js SignMsgWithPubkeyExample.js focus=17:18

````
---

```zsh output
recoveredAddr lib 0xA2a8854b1802D8Cd5De631E690817c253d6a9153 true
````

</CH.Code>

---

klay_recoverFromMessage\` を使って署名されたメッセージからアドレスを復元する。

<CH.Code>
```js SignMsgWithPubkeyExample.js focus=20:21

````
---
```zsh output
recoveredAddr rpc 0xa2a8854b1802d8cd5de631e690817c253d6a9153 true
````

</CH.Code>
</CH.Spotlight>
